# DeepLabV3Plus-Pytorch

./: .gitignore  main.py  pyproject.toml  requirements.txt
configs/: deeplabv3plus_mobilenet_attention_cityscapes.yaml  deeplabv3plus_mobilenet_attention_voc.yaml  deeplabv3plus_mobilenet_cityscapes.yaml  deeplabv3plus_mobilenet_epsa_voc.yaml  deeplabv3plus_mobilenet_voc.yaml  deeplabv3plus_resnet101_cityscapes.yaml  deeplabv3plus_resnet101_voc.yaml
datasets/: voc.py
exp/: test.sh  test.slurm
experiment/e0/: job.slurm
experiment/e0/configs/: deeplabv3plus_mobilenet_voc.yaml  deeplabv3plus_resnet50_voc.yaml
experiment/e1/: deeplabv3plus_mobilenet_v3_large_cityscapes.yaml  deeplabv3plus_mobilenet_v3_large_voc.yaml  job.sh  job.slurm
experiment/e2/: deeplabv3plus_mobilenet_attention_cityscapes.yaml  deeplabv3plus_mobilenet_attention_voc.yaml  job.slurm
experiment/e3/: deeplabv3plus_mobilenet_v3_large_attention_cityscapes.yaml  deeplabv3plus_mobilenet_v3_large_attention_voc.yaml  job.slurm
experiment/e4/: deeplabv3plus_mobilenet_v3_large_attention_cityscapes_improved.yaml  deeplabv3plus_mobilenet_v3_large_attention_voc_improved.yaml  job.sh
experiment/e5/: deeplabv3plus_mobilenet_epsa_cityscapes.yaml  deeplabv3plus_mobilenet_epsa_voc.yaml  job.slurm
network/: _deeplab.py  attention.py  modeling.py
network/backbone/: __init__.py  mobilenetv3.py
report/: create_slides.py  report-bak.tex  report.tex
utils/: __init__.py  download_checkpoints.sh  measure_models.py  scheduler.py
webapp/: app.py  requirements.txt
webapp/templates/: index.html
(+4 files in other folders)
